--- a/skript.tex
+++ b/skript.tex
@@ -33,6 +33,7 @@
 
 \newcommand{\inv}[1]{\left(#1\right)^{-1}}
 \newcommand{\Inv}[1]{#1^{-1}}
+\newcommand{\divides}{\bigm|}
 
 % Common groups and fields
 \newcommand\N{\mathbb{N}}
@@ -1233,7 +1234,7 @@ Für die Operation von \(G\) auf sich selbst durch Konjugation gilt:
 
 \subsection{Die sylowschen Sätze}
 
-Der Satz von Lagrange gibt uns die Teilbarkeit $\ord(H)|\ord(G)$ für jede Untergruppe $H$ von $G$.
+Der Satz von Lagrange gibt uns die Teilbarkeit $\ord(H) \divides \ord(G)$ für jede Untergruppe $H$ von $G$.
 Aber: Wenn \(h\) ein Teiler von $\ord(G)$ ist, existiert dann auch eine Untergruppe \(H \subseteq G\) mit $\ord(H)=h$?
 
 \begin{thm}
@@ -1283,7 +1284,7 @@ Aber: Wenn \(h\) ein Teiler von $\ord(G)$ ist, existiert dann auch eine Untergru
 
 \begin{proof}
 	\begin{itemize}
-	\item["$\Rightarrow$":] Nach Lagrange gilt für jedes \(g\in G\) die Teilbarkeit \(\ord(g) | \ord(G)=p^n\), woraus folgt, dass $\ord(g)=p^k$ für ein \(k \leq n\) ist.
+	\item["$\Rightarrow$":] Nach Lagrange gilt für jedes \(g\in G\) die Teilbarkeit \(\ord(g) \divides \ord(G)=p^n\), woraus folgt, dass $\ord(g)=p^k$ für ein \(k \leq n\) ist.
 	\item["$\Leftarrow$":] Zwecks Kontraposition sei die Ordnung von \(G\) von der Form $\ord(G)=p^\alpha q$ mit $q\neq 1$ teilerfremd zu \(p\).
 		Dann enthält \(G\) ein Element der Ordnung \(p\) für jeden Primfaktor von \(q\), somit ist die Ordnung mancher Elemente nicht von der Form $p^k$.
 	\end{itemize}
@@ -1331,7 +1332,7 @@ Da $b$ im Zentrum von $G$ liegt, ist $\langle b \rangle$ eine normale Untergrupp
 	
 	\item Sei $H$ ein $p$-Untergruppe und $S$ ein $p$-Sylowuntergruppe. $H$ operiert auf die Menge $X = G/S$ durch
 	$$ H \times X \rightarrow X, h \cdot gS := (hg)S.$$
-	Es gilt $|X| = \frac{|G|}{|S|} = \frac{p^nq}{p^n} = q$. Da $H$ eine $p$-Gruppe ist, gilt $|X^H| = |X| = q \ (modp)$. Da $q$ prim zu $p$ ist, ist $|X^H|$ nicht durch $p$ teilbar. Insbesondere kann $X^H$ nicht leer sein, denn $p|0$. Es gibt also ein $g \in G$ mit $gS \in X^H$. Für alle $h \in H$ gilt dann $(hg)S = gS$ und somit $g^{-1}hg \in S$ und $h \in gSg^{-1}$. Dies liefert, dass $H$ in $gSg^{-1}$ enthalten ist.
+	Es gilt $|X| = \frac{|G|}{|S|} = \frac{p^nq}{p^n} = q$. Da $H$ eine $p$-Gruppe ist, gilt $|X^H| = |X| = q \ (modp)$. Da $q$ prim zu $p$ ist, ist $|X^H|$ nicht durch $p$ teilbar. Insbesondere kann $X^H$ nicht leer sein, denn $p \divides 0$. Es gibt also ein $g \in G$ mit $gS \in X^H$. Für alle $h \in H$ gilt dann $(hg)S = gS$ und somit $g^{-1}hg \in S$ und $h \in gSg^{-1}$. Dies liefert, dass $H$ in $gSg^{-1}$ enthalten ist.
 	
 	\item siehe unten.
 \end{enumerate}
@@ -1365,14 +1366,14 @@ Für den Beweis des dritten Teils benötigen wir folgendes Lemma:
 	$$ [TH : T] = [H : T \cap H] = \frac{|H|}{|T \cap H|} = \frac{p^{\alpha}}{|T \cap H|} = p^{\alpha '} \text{ mit } 0 \leq \alpha ' \leq \alpha.$$
 	$TH/T$ ist also eine $p$-Gruppe. Es gilt: $|TH/T| = 1 \Leftrightarrow T \cap H = H \Leftrightarrow H \subseteq T$. \\
 	Die Inklusionskette $T \subseteq TH \subseteq G$ von Untergruppen ergibt
-	$$[G:T] = [G:TH][TH:T] \Leftrightarrow q = [G:TH]p^{\alpha '} \text{, d.h. } p^{\alpha '} | q.$$
+	$$[G:T] = [G:TH][TH:T] \Leftrightarrow q = [G:TH]p^{\alpha '} \text{, d.h. } p^{\alpha '} \divides q.$$
 	Da $q$ nicht durch $p$ teilbar ist, muss $p^{\alpha '} = 1$ sein. Also ist $H$ in $T$ enthalten.
 \end{proof}
 
 \begin{proof}[Beweis des dritten Teils des Sylow-Satzes]
 	Sei $X$ die Menge aller $p$-Sylowuntergruppen von $G$, $S \in X$ beliebig (Existenz: siehe Teil 1), $s := |X|$. Es gilt $s = [G:N_G(S)]$. \\
 	Aus der Inklusionskette $S \subseteq N_G(S) \subseteq G$ folgt
-	$$[N_G(S):S] [G:N_G(S)] = [G:S] \Leftrightarrow [N_G(S):S] s = q \text{, d.h. } s | q.$$
+	$$[N_G(S):S] [G:N_G(S)] = [G:S] \Leftrightarrow [N_G(S):S] s = q \text{, d.h. } s \divides q.$$
 	Wir lassen $S$ wie folgt auf X operieren:
 	$$S \times X \rightarrow X, g \cdot T \mapsto gTg^{-1}.$$
 	$S \in X$ ist ein Fixpunkt dieser Operation. Wir möchten zeigen, dass dieser der einzige Fixpunkt ist. Da $S$ eine $p$-Gruppe ist, gilt dann: $s = |X| = |X^S| = 1 \pmod{p}$ (was zu zeigen war).
@@ -1391,9 +1392,9 @@ Für den Beweis des dritten Teils benötigen wir folgendes Lemma:
 \end{thm}
 
 \begin{proof}
-	Es sei $s$ die Anzahl der $p$-Sylowuntergruppen von $G$. Aus Teil 3 des Sylow-Satzes folgt $s | q, s \equiv 1 \pmod{p}$. Da $q \not \equiv 1 \pmod{p}$, muss $s = 1$ gelten, denn die Primzahl $q$ ist nur durch $1$ und $q$ teilbar. \\
+	Es sei $s$ die Anzahl der $p$-Sylowuntergruppen von $G$. Aus Teil 3 des Sylow-Satzes folgt $s \divides q, s \equiv 1 \pmod{p}$. Da $q \not \equiv 1 \pmod{p}$, muss $s = 1$ gelten, denn die Primzahl $q$ ist nur durch $1$ und $q$ teilbar. \\
 	Es gibt also eine einzige $p$-Sylowuntergruppe $S$ von $G$. Aus Teil 2 des Sylow-Satzes folgt $gSg^{-1} = S$ für alle $g \in G$. Somit ist $S$ eine normale Untergruppe. \\
-	Für die Anzahl $r$ der $q$-Sylowuntergruppen gilt: $r | p$ und $r \equiv 1 \pmod{q}$. Wenn $r = p$, dann gilt $r = p \not = 1 \pmod{q}$ (wegen $p < q$). Dies ist also nicht möglich. Es gilt dann $r = 1$. Es existiert genau eine $q$-Sylowuntergruppe $R$ von $G$ und $R$ ist deswegen ein Normalteiler von $G$. Da $S$ und $R$ normal sind, ist $SR = \{ ab : a \in S, b \in R\}$ eine normale Untergruppe. \\
+	Für die Anzahl $r$ der $q$-Sylowuntergruppen gilt: $r \divides p$ und $r \equiv 1 \pmod{q}$. Wenn $r = p$, dann gilt $r = p \not = 1 \pmod{q}$ (wegen $p < q$). Dies ist also nicht möglich. Es gilt dann $r = 1$. Es existiert genau eine $q$-Sylowuntergruppe $R$ von $G$ und $R$ ist deswegen ein Normalteiler von $G$. Da $S$ und $R$ normal sind, ist $SR = \{ ab : a \in S, b \in R\}$ eine normale Untergruppe. \\
 	$S \cap R = \{ e\}$ (die Elemente müssen Ordnung $1$ haben). Dies ergibt, dass $SR$ das (innere) direkte Produkt von $S$ und $R$ ist. Insbesondere gilt $|SR| = |S \times R| = |S||R| = pq = |G|$. Folglich gilt $G = S \times R$. Man zeigt dann, $G = \langle ab \rangle \text{ mit } \langle a \rangle = S, \langle b \rangle = R$ zyklisch.
 \end{proof}
 
@@ -1404,9 +1405,9 @@ Für den Beweis des dritten Teils benötigen wir folgendes Lemma:
 
 \begin{proof}
 	Es ist $|G| = 30 = 2\cdot 3\cdot 5$. Es seien $s$ die Anzahl der 5-Sylowuntergruppen und $t$ die der 3-Sylowuntergruppen. Angenommen, $G$ sei einfach. Dann gilt: $s>1$ und $t>1$, denn mit $s=1$ (bzw. $t=1$) wäre die 5-Sylowuntergruppe (bzw. 3-Sylowuntergruppe) normal wegen Konjugiertheit der Sylowgruppen zueinander (Teil 2 im Satz). Aus Teil (3) folgt
-		\[ s|6,\; s\equiv 1(5)\Rightarrow s=6.\]
+		\[ s \divides 6,\; s\equiv 1(5)\Rightarrow s=6.\]
 	Also gibt es 6 verschiedene 5-Sylowuntergruppen, jede davon hat Ordnung $5$. Damit enthalten die 5-Sylowuntergruppen zusammen $6\cdot 4 =24$ Elemente und das neutrale Element. Analog gilt für $t$
-		\[ t|10,\; t\equiv 1(3) \Rightarrow t=10.\]
+		\[ t \divides 10,\; t\equiv 1(3) \Rightarrow t=10.\]
 	Damit enthalten die 3-Sylowuntergruppen $10\cdot 2=20$ Elemente und das neutrale Element.
 	
 	Aber: $20+24+1=45>30=\ord(G)$. Also kann $G$ nicht einfach sein.
@@ -1607,7 +1608,7 @@ Wie im Fall der direkten Produkte zeigt man das Folgende:
 \begin{ex}
   \begin{itemize}
     \item $G = \bigoplus_{i \in I} H_i \quad H_i \cong \mathbb{Z}$
-    \item $M$ feste Menge, $G = \left\{ f : M \to \mathbb{Z} \,|\, f(m) = 0 \text{ für fast alle } m \in M \right\}$ ist freie abelsche Gruppe.  Für $m \in M$ definiert man $f_m \in G$ durch $f_m(m) = 1, f_m(m') = 0$ für $m' \in M, m' \neq m$. $X = \left\{ f_m \,|\, m \in M \right\}$ ist dann eine Basis von $G$.
+    \item $M$ feste Menge, $G = \left\{ f : M \to \mathbb{Z} \divides f(m) = 0 \text{ für fast alle } m \in M \right\}$ ist freie abelsche Gruppe.  Für $m \in M$ definiert man $f_m \in G$ durch $f_m(m) = 1, f_m(m') = 0$ für $m' \in M, m' \neq m$. $X = \left\{ f_m \divides m \in M \right\}$ ist dann eine Basis von $G$.
   \end{itemize}
 \end{ex}
 
@@ -1702,7 +1703,7 @@ $G/T(G)$ ist torsionsfrei und endlich erzeugt, also frei abelsch. Dann ist $T(G)
 
 $T(G)$ ist eine Torsionsuntergruppe, die endlich erzeugt ist. Daraus folgt: 
 
-$T(G)=\langle g_{1}, \dots ,g_{m}\rangle=\{ n_{1}g_{1}+ \dots +n_{m}g_{m}:n_{j}\in \mathbb{Z}\}=\{ n_{1}g_{1}+\dots+n_{m}g_{m}:\|n_{j}\| \leq ord(g_{j})\} \Rightarrow \|T(G)\| < \infty$
+$T(G)=\langle g_{1}, \dots ,g_{m}\rangle=\{ n_{1}g_{1}+ \dots +n_{m}g_{m}:n_{j}\in \mathbb{Z}\}=\{ n_{1}g_{1}+\dots+n_{m}g_{m}:\|n_{j}\| \leq \ord(g_{j})\} \Rightarrow \|T(G)\| < \infty$
 \end{proof}
 
 Endlich erzeugte freie abelsche Gruppen sind bekannt: Sie sind von der Form $F\cong \mathbb{Z}^{r}=\mathbb{Z} \oplus \dots\oplus \mathbb{Z}$, mit $r\geq 0$.
@@ -1735,10 +1736,10 @@ Da die Ordnung eines Elements von $G$ immer $| G|$ teilt, gilt $Gp=\{ 0\}$ für 
 \begin{equation} \label{eq}
 Gp_{i} \bigcap \langle\bigcup_{j\neq i} Gp_{j} \rangle = \{ 0 \}
 \end{equation}
-Die Elemente von $\langle\bigcup_{j\neq i} Gp_{j}\rangle$ sind von der Form $g=\sum_{j\neq i} g_{j}, g_{j} \in Gp_{j}$. Damit folgt unter Beachtung von $ord(g_{j})=p_{j}^{\alpha_{j}}, \alpha_{j}\geq 0$ 
-\[(\prod_{j\neq i} p_{j}^{\alpha_{j}})g=0 \rightarrow ord(g)| (\prod_{j\neq i} p_{j}^{\alpha_{j}})\]
-Gilt zusätzlich $g \in Gp_{i}$ so erhalten wir:
-\[ \ord(g)=p_{i}^{\alpha_{i}}| (\prod_{j\neq i} p_{j}^{\alpha_{j}})\Rightarrow p_{i}^{\alpha_{i}}=1 \Rightarrow \ord(g)=1\]
+Die Elemente von $\langle\bigcup_{j\neq i} Gp_{j}\rangle$ sind von der Form $g=\sum_{j\neq i} g_{j}, g_{j} \in Gp_{j}$. Damit folgt unter Beachtung von $\ord(g_{j})=p_{j}^{\alpha_{j}}, \alpha_{j}\geq 0$ 
+\[(\prod_{j\neq i} p_{j}^{\alpha_{j}})g=0 \rightarrow \ord(g) \divides (\prod_{j\neq i} p_{j}^{\alpha_{j}}).\]
+Gilt zusätzlich $g \in Gp_{i}$, so erhalten wir:
+\[ \ord(g)=p_{i}^{\alpha_{i}} \divides (\prod_{j\neq i} p_{j}^{\alpha_{j}})\Rightarrow p_{i}^{\alpha_{i}}=1 \Rightarrow \ord(g)=1.\]
 Aus \eqref{eq} folgt $\langle\bigcup_{1\leq i\leq r} Gp_{i}\rangle = \bigoplus_{p\text{ prim}} Gp$.
 \end{proof}
 
@@ -1751,7 +1752,7 @@ Die Zahlen $m_1,m_2,\dots,m_k$ sind eindeutig durch $G$ bestimmt. O.B.d.A. ordne
 \end{thm}
 
 \begin{nb}
-Es gilt: $m_{1}+\dots+m_{k}=n$
+Es gilt: $m_{1}+\dots+m_{k}=n$.
 \end{nb}
 
 \begin{lemma}
@@ -1760,7 +1761,7 @@ Dann ist $\langle p\rangle$ ein direkter Summand von $G$ ($G=\langle p\rangle\op
 \end{lemma}
 
 \begin{proof}
-Es sei $p^{\alpha}$ die maximale Ordnung eines Elements in $G$ und $g\in G$ mit $ord(g)=p^{\alpha}$. OBdA $\langle g\rangle \neq G$ 
+Es sei $p^{\alpha}$ die maximale Ordnung eines Elements in $G$ und $g\in G$ mit $\ord(g)=p^{\alpha}$. OBdA $\langle g\rangle \neq G$ 
 \begin{enumerate}
 \item Schritt: Wir möchten zeigen, dass es eine Untergruppe $H\subseteq G$ gibt mit $|H|=p, H\cap \langle g\rangle =\{ 0\}$.
 
@@ -1770,8 +1771,8 @@ Wegen $h\notin \langle g\rangle$ ist $\beta\geq1$.
 Da $p^{\beta}(h+\langle g\rangle)=\langle g\rangle$ ist, gilt $p^{\beta}h=lg$ mit geeigneten $l\in \mathbb{Z}$. 
 Da $p^{\alpha}$ die maximale Ordnung eines Elements von $G$ ist, ist $\ord(h)$ ein Teiler von $p^{\alpha}$ und somit gilt:
 \[ 0=p^{\alpha}h=p^{\alpha -\beta}(p^{\beta}h)=p^{\alpha -\beta}lg\]
-Daraus folgt: $ \ord(g)=p^{\alpha}|p^{\alpha -\beta}l$ $(\beta \geq 1)$. 
-Was nur möglich ist, wenn $p|l$. 
+Daraus folgt: $ \ord(g)=p^{\alpha} \divides p^{\alpha -\beta}l$ $(\beta \geq 1)$. 
+Was nur möglich ist, wenn $p \divides l$. 
 Wir schreiben $l=\lambda p, \lambda \in \mathbb{Z}$ und definieren: $h':=p^{\beta -1}h-\lambda g \in G - \langle g \rangle.$ Man rechnet $ ph' = p^{\beta}h - p \lambda g =lg-lg=0$.
 
 $\ord(h')$ ist ein Teiler von $p$ und wegen $h'\neq 0$ muss $\ord(h')=p$ gelten. 
@@ -1785,9 +1786,9 @@ $G/H$ ist eine abelsche p-Gruppe mit $|G/H|<|G|$ und $\pi (g)\in G/H$ ist eine E
 
 Da die maximale Ordnung in $G/H$ höchstens $\ord(g)=p^{\alpha}$ ist, reicht es zu zeigen, dass $\ord(\pi (g))=p^{\alpha}$ gilt.
 $m=\ord(\pi (g))$ ist die kleinste positive Zahl, so dass $mg\in H$. Aus $\langle g\rangle \cap H=\{ 0\}$ folgt:
-\[ mg\in \langle g\rangle \cap H=\{ 0\} \Rightarrow mg=0 \Rightarrow p^{\alpha}=\ord(g)|m\]
+\[ mg\in \langle g\rangle \cap H=\{ 0\} \Rightarrow mg=0 \Rightarrow p^{\alpha}=\ord(g) \divides m\]
 Ferner gilt:
-\[ p^{\alpha}\pi (g)=\pi (p^{\alpha}g)=\pi(0) =0\Rightarrow m|p^{\alpha}\]
+\[ p^{\alpha}\pi (g)=\pi (p^{\alpha}g)=\pi(0) =0\Rightarrow m \divides p^{\alpha}\]
 Also gilt $m=p^{\alpha}$. Es folgt $G/H=\langle \pi (g)\rangle \oplus V'$. 
 Wir setzen $V := \pi ^{-1}(V') \subseteq G$. Wir möchten zeigen $G=\langle g\rangle \oplus V$. Es sei $a\in \mathbb{Z}$, so dass $ag\in V$. Dann gilt:
 \[ \pi (ag)\in \langle \pi (g)\rangle\ \cap V'=\{ 0\}\Rightarrow ag\in H\Rightarrow ag=0\Rightarrow \langle g\rangle \cap V=\{ 0\}.\]
