\divides zu binärer Relation erklärt

--- a/skript.tex
+++ b/skript.tex
@@ -30,10 +30,10 @@
 \DeclareMathOperator{\Aut}{Aut}
 \DeclareMathOperator{\rank}{Rang}
 
-
+% Further shorthands for maths
 \newcommand{\inv}[1]{\left(#1\right)^{-1}}
 \newcommand{\Inv}[1]{#1^{-1}}
-\newcommand{\divides}{\bigm|}
+\newcommand{\divides}{\mathrel{\bigm|}}
 
 % Common groups and fields
 \newcommand\N{\mathbb{N}}
