Beweisvorschlag zur Eindeutigkeit der Untergruppen zyklischer Gruppen endlicher Ordnung hinzugefügt.

--- a/skript.tex
+++ b/skript.tex
@@ -346,11 +346,17 @@
 
 Ähnlich kann man zeigen:
 
-\begin{thm} % FIXME Beweis?
+\begin{thm} % FIXME Beweis? -- Fixed? (Fabian)
 	Alle Untergruppen einer zyklischen Gruppe sind zyklisch.
         %TODO \ord(G) -> \lvert G \lvert, \ord nur für Gruppenelemente verwenden
 	Ist $\ord(G)=n$ endlich und $m$ ein Teiler von $n$, so ist $H = \langle g^{\frac{n}{m}}\rangle$ die einzige Untergruppe der Ordnung $m$.
 \end{thm}
+
+\begin{proof}
+  Dass jede Untergruppe $U$ einer zyklischen Gruppe $G = \langle g \rangle$ wiederum zyklisch ist, folgt aus dem vorangehenden Beweis. 
+  
+  Sei nun $\lvert G \rvert = \ord(g) = n < \infty$ und $m \in \mathbb{N}$ mit $m \divides n$. (Existenz) Nach einem der vorigen Beweise folgt bereits, dass $\langle g^{\frac{n}{m}} \rangle$ eine Untergruppe der Ordnung $m$ ist. (Eindeutigkeit) Sei nun $U$ eine Untergruppe von $G$ mit $\lvert U \rvert = m$. Da $U$ zyklisch ist, existiert ein $k \in \mathbb{N}$, sodass $U = \langle g^k \rangle$. Mit dem Satz von Lagrange (später) folgt $(g^k)^m = e = g^n$, also $km \divides n$. Daraus folgt $\frac{n}{m} \divides k$, was $a^k \in \langle g^\frac{n}{m} \rangle$ impliziert. Dann ist aber $U \subseteq \langle{g^\frac{n}{m}} \rangle$ und mit $\lvert U \rvert = m = \lvert \langle g^\frac{n}{m} \rangle \rvert$ folgt $U = \langle{g^\frac{n}{m}} \rangle$.
+\end{proof}
 
 \begin{defn}
 	Sei $H$ eine Untergruppe der Gruppe $G$.
