--- a/skript.tex
+++ b/skript.tex
@@ -355,7 +355,7 @@
 \begin{proof}
   Dass jede Untergruppe $U$ einer zyklischen Gruppe $G = \langle g \rangle$ wiederum zyklisch ist, folgt aus dem vorangehenden Beweis. 
   
-  Sei nun $\lvert G \rvert = \ord(g) = n < \infty$ und $m \in \mathbb{N}$ mit $m \divides n$. (Existenz) Nach einem der vorigen Beweise folgt bereits, dass $\langle g^{\frac{n}{m}} \rangle$ eine Untergruppe der Ordnung $m$ ist. (Eindeutigkeit) Sei nun $U$ eine Untergruppe von $G$ mit $\lvert U \rvert = m$. Da $U$ zyklisch ist, existiert ein $k \in \mathbb{N}$, sodass $U = \langle g^k \rangle$. Mit dem Satz von Lagrange (später) folgt $(g^k)^m = e = g^n$, also $km \divides n$. Daraus folgt $\frac{n}{m} \divides k$, was $a^k \in \langle g^\frac{n}{m} \rangle$ impliziert. Dann ist aber $U \subseteq \langle{g^\frac{n}{m}} \rangle$ und mit $\lvert U \rvert = m = \lvert \langle g^\frac{n}{m} \rangle \rvert$ folgt $U = \langle{g^\frac{n}{m}} \rangle$.
+  Sei nun $\lvert G \rvert = \ord(g) = n < \infty$ und $m \in \mathbb{N}$ mit $m \divides n$ und $U$ eine Untergruppe von $G$ mit $\lvert U \rvert = m$. Da $U$ zyklisch ist, existiert ein $k \in \mathbb{N}$, sodass $U = \langle g^k \rangle$. Mit dem Satz von Lagrange (später) folgt $(g^k)^m = e = g^n$, also $km \divides n$. Daraus folgt $\frac{n}{m} \divides k$, was $a^k \in \langle g^\frac{n}{m} \rangle$ impliziert. Dann ist aber $U \subseteq \langle{g^\frac{n}{m}} \rangle$ und mit $\lvert U \rvert = m = \lvert \langle g^\frac{n}{m} \rangle \rvert$ folgt $U = \langle{g^\frac{n}{m}} \rangle$.
 \end{proof}
 
 \begin{defn}
